Fixed bug causing empty buffs to break on refresh

--- a/src/components/buffEditor/BuffEditor.scss
+++ b/src/components/buffEditor/BuffEditor.scss
@@ -58,7 +58,7 @@
 		}
 
 		delete {
-			float: left;
+			float: right;
 			display: block;
 			color: #FFF;
 			padding: 5px  3px;
